--- a/src/template/mainView.html
+++ b/src/template/mainView.html
@@ -1,3 +1,54 @@
-<div class="con-lorempicsum__image-container">
-    <img class="con-lorempicsum__image" src="https://picsum.photos/<%- imageString %><%- imageSuffix %>">
+
+<% if (license == "cc") { %>
+<div class="con-attribution">
+    <a  class="con-attribution__iconLink" target="_blank" href="<%- ccUrl %>">
+        <div class="con-attribution__ccIcon"></div>
+        <div class="con-attribution__ccText"><%- mergedOptions %></div>
+    </a>
+    <div class="con-attribution__ccAttribution">
+        <% if (reference !== "") { %> 
+        <p class="con-attribution__ccAttribution"><%- reference %></p>
+        <% } %>
+        <a target="_blank" href="<%- url %>"><%- name %></a>
+    </div>
 </div>
+        
+
+
+<% } else { %>
+
+   
+
+<% if (license == "pd") { %>
+
+
+
+    <div class="con-attribution">
+        <a  class="con-attribution__iconLink" target="_blank" href="#">
+            <div class="con-attribution__ccPdIcon"></div>
+        </a>
+        <div class="con-attribution__ccAttribution">
+            <a target="#" href="<%- url %>">Public Domain</a>
+        </div>
+    </div>
+
+
+    
+
+<% } else { %>
+
+        <div class="con-attribution">
+            <a  class="con-attribution__iconLink" target="_blank" href="#">
+                <div class="con-attribution__anyIcon"></div>
+            </a>
+            <div class="con-attribution__ccAttribution">
+                <% if (reference !== "") { %> 
+                <p class="con-attribution__ccAttribution"><%- reference %></p>
+                <% } %>
+                <a target="#" href="<%- url %>"><%- name %></a>
+            </div>
+        </div>
+
+<% } %>
+
+<% } %>
