--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,65 @@
-.con-lorempicsum__image {
-    width: 100%;
-    height: auto;
+.con-attribution {
+    color: rgba(0,0,0,0.5);
+    background: rgba(255,255,255,0.7);
+    font-family: Verdana,sans-serif;
+    font-size: 10px;
+    display: inline-flex;
+    flex-direction: row;
+    padding: 5px 8px 3px 5px;
+    border-radius: 3px;
+    margin-top: 3px;
+}
+
+.con-attribution__ccAttribution a {
+    text-decoration: none;
+    margin-top: 0px;
+}
+.con-attribution__ccAttribution {
+    margin-top: 0px;
+    text-decoration: none;
+    display: inline-flex;
+}
+
+.con-attribution__ccAttribution p {
+    display: inline-flex;
+    margin: 0 5px 0 0;
+}
+
+.con-attribution__iconLink {
+    display: flex;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.con-attribution__ccText {
+    margin-right: 5px;
+    text-decoration: none;
+    margin-top: 0px;
+}
+
+.con-attribution__ccIcon:before {
+    content: url("https://www.kedschools.com/webdav/files/CDN/img/ui/cc_mini.png");
+    border: 0;
+    height: 15px;
+    width: 15px;
+    min-width: 15px;
+    margin-right: 3px;
+}
+
+.con-attribution__ccPdIcon:before {
+    content: url("https://www.kedschools.com/webdav/files/CDN/img/ui/pd_mini.png");
+    border: 0;
+    height: 15px;
+    width: 15px;
+    min-width: 15px;
+    margin-right: 3px;
+}
+
+.con-attribution__anyIcon:before {
+    content: url("https://www.kedschools.com/webdav/files/CDN/img/ui/any_mini.png");
+    border: 0;
+    height: 15px;
+    width: 15px;
+    min-width: 15px;
+    margin-right: 3px;
 }
